def mainClassName = "pro.gravit.launchermodules.mojangsupport.ModuleImpl"

sourceCompatibility = '17'
targetCompatibility = '17'

jar {
    manifest.attributes("Module-Main-Class": mainClassName)
}
